[package]
name = "ethers-rlp"
version = "0.1.0"
description = "A fast Rust implementation of the Ethereum RLP encoding"
readme = "README.md"
keywords = ["ethereum", "rlp", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arrayvec.workspace = true
bytes.workspace = true

ethers-rlp-derive = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
default = ["std", "derive"]
std = ["arrayvec/std", "bytes/std"]
derive = ["dep:ethers-rlp-derive"]
