[package]
name = "alloy-rlp"
description = "Implementation of Ethereum RLP serialization"
keywords = ["ethereum", "rlp", "serialization"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/rlp"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec.workspace = true
bytes.workspace = true

alloy-rlp-derive = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
default = ["std", "derive"]
std = ["arrayvec/std", "bytes/std"]
derive = ["dep:alloy-rlp-derive"]
