[package]
name = "alloy-rpc-types"
description = "Ethereum RPC types"
readme = "README.md"
keywords = ["ethereum", "abi", "encoding", "evm", "rpc"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/rpc-types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std", "rlp"] }
alloy-rlp = { workspace = true, features = ["std", "derive"] }

# misc
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
hex-literal.workspace = true
once_cell = { workspace = true, features = ["std"] }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["std", "arbitrary"] }
arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-derive.workspace = true

[features]
arbitrary = ["alloy-primitives/arbitrary", "dep:arbitrary", "dep:proptest", "dep:proptest-derive"]
test-utils = []
