[package]
name = "alloy-sol-macro"
description = "Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro"
exclude = ["doctests/README.md"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc_macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
syn-solidity = { workspace = true, features = ["visit", "visit-mut"] }

proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

dunce = "1.0"
heck = "0.4"
hex.workspace = true
indexmap = "2.0"
proc-macro-error = "1.0"
tiny-keccak = { workspace = true, features = ["keccak"] }

# json
alloy-json-abi = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
json = ["dep:alloy-json-abi", "dep:serde_json"]
