[package]
name = "alloy-sol-macro"
description = "Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
proc_macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-sol-macro-input.workspace = true

syn-solidity = { workspace = true, features = ["visit", "visit-mut"] }

proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

heck = "0.4"
hex.workspace = true
indexmap = "2"
proc-macro-error = "1.0"
tiny-keccak = { workspace = true, features = ["keccak"] }

# json
alloy-json-abi = { workspace = true, optional = true }

[features]
json = ["dep:alloy-json-abi", "alloy-sol-macro-input/json"]
