[package]
name = "alloy-sol-type-parser"
description = "Simple and light-weight Solidity type strings parser"
keywords = ["ethereum", "abi", "evm", "solidity", "parser"]
categories = ["no-std", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-type-parser"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
winnow.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = ["winnow/std"]
serde = ["dep:serde"]
debug = ["std"] # intentionally doesn't enable `winnow/debug`
