[package]
name = "alloy-sol-types"
description = "Compile-time ABI and EIP-712 implementations"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true

hex = { workspace = true, features = ["alloc"] }

serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
hex-literal.workspace = true
trybuild = "1.0"

[features]
default = ["std", "hex/alloc"]
std = ["alloy-primitives/std", "hex/std", "serde?/std"]
eip712-serde = ["dep:serde", "serde?/alloc", "alloy-primitives/serde"]
