[package]
name = "alloy-sol-types"
description = "Compile-time ABI and EIP-712 implementations"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true

hex.workspace = true

serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

proptest.workspace = true
rustversion = "1.0"
trybuild = "1.0"

[features]
default = ["std"]
std = ["alloy-primitives/std", "hex/std", "serde?/std"]
json = ["alloy-sol-macro/json"]
eip712-serde = ["dep:serde", "alloy-primitives/serde"]
arbitrary = ["alloy-primitives/arbitrary"]
