[package]
name = "alloy-sol-types"
description = "Compile-time ABI and EIP-712 implementations"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["no-std", "encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true

hex.workspace = true

# json
alloy-json-abi = { workspace = true, optional = true }

# eip712-serde
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = [
    "arbitrary",
    "serde",
    "rlp",
] }
alloy-rlp.workspace = true
derive_more.workspace = true
paste.workspace = true
pretty_assertions.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

proptest.workspace = true
rustversion = "1.0"
trybuild = "1.0"

[features]
default = ["std"]
std = ["alloy-primitives/std", "hex/std", "alloy-json-abi?/std", "serde?/std"]
json = ["dep:alloy-json-abi", "alloy-sol-macro/json"]
eip712-serde = ["dep:serde", "alloy-primitives/serde"]
arbitrary = ["alloy-primitives/arbitrary"]
