[package]
name = "alloy-types"
description = "Ethereum types"
keywords = ["ethereum", "abi", "encoding", "evm", "eth"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["std", "serde", "rlp"] }
alloy-rlp = { workspace = true, features = ["std", "derive"] }

# crypto
secp256k1 = { version = "0.27.0", features = ["recovery"] }

# used for forkid
crc = "3"

# only "net" modules
url = "2"

# misc
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
once_cell = { workspace = true, features = ["std"] }

# macros
derive_more.workspace = true
num_enum.workspace = true
strum.workspace = true
thiserror.workspace = true

# proof related
triehash = { version = "0.8", optional = true }
plain_hasher = { version = "0.2", optional = true }
hash-db = { version = "0.15", optional = true }
tracing = { version = "0.1", optional = true }

# arbitrary
arbitrary = { workspace = true, optional = true }
derive_arbitrary = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = "1"
rand = "0.8"

alloy-primitives = { workspace = true, features = ["std", "arbitrary", "getrandom"] }
arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-derive.workspace = true

[features]
proof = ["dep:triehash", "dep:plain_hasher", "dep:hash-db", "dep:tracing"]
arbitrary = [
    "alloy-primitives/arbitrary",
    "dep:arbitrary",
    "dep:derive_arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
]
test-utils = []
