[package]
name = "examples-transactions"
version = "0.0.0"
publish = false
authors = ["Yash Atreya <yashatreya.ya@icloud.com>"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-core = "0.6.4"
alloy-sol-types = "0.6.4"
alloy-providers = { git = "https://github.com/alloy-rs/alloy", rev = "9ac2c90", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "9ac2c90", default-features = false }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "9ac2c90", default-features = false }

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
eyre = "0.6.12"
