[package]
name = "ethers-rlp-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for ethers-rlp"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ethers-rs/core"
readme = "README.md"
keywords = ["ethers", "rlp", "derive", "ethereum"]
categories = ["encoding", "serialization", "cryptocurrency", "ethereum"]
authors = []

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
