[package]
name = "ethers-rlp-derive"
version = "0.1.0"
description = "Procedural macros for ethers-rlp"
readme = "README.md"
keywords = ["ethereum", "rlp", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
