[package]
name = "alloy-core-sol-test"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-core = { workspace = true, features = ["sol-types", "json", "map"] }
derive_more = { version = "2", default-features = false } # https://github.com/alloy-rs/core/pull/918#issuecomment-2743739367
